tests/NormalTests/paczka1/fuzzy1/20419174.err
Error in line 1: S548 S548 29,3
Error in line 13: bzQeWcRUY1z S548 3,9
Error in line 15: bzQeWcRUY1z S131 25,0
Error in line 23: HrXbHQA1 S71 98,4
Error in line 40: zsLEVYDUA S71 -1,2
